@@ -78,11 +78,41 @@
 #          if nothing is specified, the default is -50
 -
 
-# Define colors
+# Define colors and attributes.  Give a list of attributes, one
+# background color and one foreground color (default is used if
+# color is left out).
 #
-# bold inverse blink dim underline
-# white cyan magenta blue yellow green red black
-# bg_white bg_cyan bg_magenta bg_blue bg_yellow bg_green bg_red bg_black
+# Attributes:
+#   bold inverse blink dim underline
+#
+# Standard colors:
+#
+# Foreground:
+#   white cyan magenta blue yellow green red black
+#
+# Background:
+#   bg_white bg_cyan bg_magenta bg_blue bg_yellow bg_green bg_red bg_black
+#
+# For 16 color and 256 color xterms: "export TERM=xterm-16color", these
+# brighter than normal colors are available:
+#
+# Note that you need an xterm which was compiled to support 16 or 256 colors
+# and a matching termcap/terminfo entry for it.
+#
+# Foreground:
+#   WHITE CYAN MAGENTA BLUE YELLOW GREEN RED BLACK
+#
+# Background:
+#   bg_WHITE bg_CYAN bg_MAGENTA bg_BLUE bg_YELLOW bg_GREEN bg_RED bg_BLACK
+#
+# For 256 color xterm: "export TERM=xterm-256color", these become available:
+#
+# Note that you need an xterm which was compiled to support 256 colors and a
+# matching termcap/terminfo entry for it.
+#
+# fg_RGB and bg_RGB, where R, G, and B range from 0 - 5.  So: fg_500 is bright red.
+#
+# fg_NN and bg_NN give shades of grey, where the intensity, NN, ranges from 0 - 23.
 
 =Idle
 =Bad		bold red
